--- a/TYPE/index.html
+++ b/TYPE/index.html
@@ -22,6 +22,7 @@
 <body>
 	<!-- BASIC HTML INFO -->
 	<div class="container">
+		<!-- THE CLOCK -->
 		<p id="date"> 
 			<div id="clock">
 		  	<p class="unit" id="hours"></p>
@@ -30,9 +31,9 @@
 			<p class="unit" id="ampm"></p>
 			</div>
 		</p>
+		<!-- THE MAIN INFO -->
 		<h1 class="neon" data-text="OPEN 24 HOURS">OPEN 24 HOURS</h1>
 		<h1 class="navigation"> To navigate : ↑ , ↓ , → , ← , ↵ , & Space .</h2>
-
 	</div>
 </body>
 </html>
