--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -27,6 +27,10 @@
   		<div class="ovo-artist-cell" id ='Personal'> Personal </div>
   	</div>
 
+  	<div class="ovo-songs">
+  	<div class="ovo-song-cell" id='stream'> Stream Artists Under The Label. </div>
+  	</div>
+
 <!-- <h1> OVO SOUND</h1>
 <h2> Stream Toronto artists under the label. </h2> -->
 </body>
