--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<div class="ovo-artists">
-  		<div class="ovo-artist-cell" id='OVO'> True Ovo </div>
+  		<div class="ovo-artist-cell" id='OVO'> True Ovo </div><div>Stream Artists Under The Label. </div>
   		<div class="ovo-artist-cell" id ='Spirit'> Spirit </div>
   		<div class="ovo-artist-cell" id ='Mood'> Mood </div>
   		<div class="ovo-artist-cell" id ='NotNice'> Not Nice </div>
