--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -18,21 +18,15 @@
 
 </head>
 <body>
-	<div class="ovo-artists">
-  		<div class="ovo-artist-cell" id='OVO'> True Ovo </div><div>Stream Artists Under The Label. </div>
-  		<div class="ovo-artist-cell" id ='Spirit'> Spirit </div>
-  		<div class="ovo-artist-cell" id ='Mood'> Mood </div>
-  		<div class="ovo-artist-cell" id ='NotNice'> Not Nice </div>
-  		<div class="ovo-artist-cell" id ='Switch'> Switch </div>
-  		<div class="ovo-artist-cell" id ='Personal'> Personal </div>
+	<div class="ovo">
+  		<div class="ovo-song-cell" id='OVO'> True Ovo <div class="ovo-artist-cell" id='stream'> Stream Toronto Artists Under The Label. </div></div>
+  		<div class="ovo-song-cell" id ='Spirit'> Spirit <div class="ovo-artist-cell" id='majid'> Majid Jordan </div></div>
+  		<div class="ovo-song-cell" id ='Mood'> Mood <div class="ovo-artist-cell" id='dvsn'> DVSN </div></div>
+  		<div class="ovo-song-cell" id ='NotNice'> Not Nice <div class="ovo-artist-cell" id='pnd'> PartyNextDoor </div> </div>
+  		<div class="ovo-song-cell" id ='Switch'> Switch <div class="ovo-artist-cell" id='roy'> Roy Woods </div></div>
+  		<div class="ovo-song-cell" id ='Personal'> Personal <div class="ovo-artist-cell" id='plaza'> Plaza </div></div>
   	</div>
-
-  	<div class="ovo-songs">
-  	<div class="ovo-song-cell" id='stream'> Stream Artists Under The Label. </div>
-  	</div>
-
-<!-- <h1> OVO SOUND</h1>
-<h2> Stream Toronto artists under the label. </h2> -->
+  	
 </body>
 </html>
 
