--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -5,16 +5,21 @@
 	<title>OVO</title>
 	<!-- LINKED FILES + JQUERY ACCESS -->
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	<link rel="stylesheet" href="css/style.css">
 	<script src="js/script.js"></script>
 
 	<!-- FLICKITY ACCESS -->
 	<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 	<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
+	<!-- CSS LINKED FILE (HAS TO BE AFTER FLICKITY) -->
+	<link rel="stylesheet" href="css/style.css">
+
 	<!-- IMPORTED FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Palanquin+Dark:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300" rel="stylesheet">
+
+
+
 
 </head>
 <body>
