--- a/YOUTUBE/index.html
+++ b/YOUTUBE/index.html
@@ -17,6 +17,9 @@
     <div id="player"></div>
     <button id="play">play</button>
     <button id="play2">play2</button>
+    <button id="play3">play3</button>
+    <button id="play4">play4</button>
+    <button id="play5">play5</button>
     <button id="stop">stop</button>
 
 
@@ -52,21 +55,40 @@
 
 
       $("#play").click(function(){
-        player.loadVideoById("acKK5i8IZXM");
+        player.loadVideoById("5L7g17qvaH0");
         playVideo();
-
 
       })
 
 
 
       $("#play2").click(function(){
-        player.loadVideoById("VkVzfOVq_Vc");
+        player.loadVideoById("5mEOjwf55u8");
         playVideo();
-
 
       })
 
+
+      $("#play3").click(function(){
+        player.loadVideoById("cFkoM7QLMwY");
+        playVideo();
+
+      })
+
+      $("#play4").click(function(){
+        player.loadVideoById("4WI_lF_xxG4");
+        playVideo();
+
+      })
+
+        $("#play5").click(function(){
+        player.loadVideoById("qxlMFJHEiVU");
+        playVideo();
+
+      })
+
+
+    //bDSx_OOR66A
 
       $("#stop").click(function(){
         stopVideo();
