--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -28,7 +28,7 @@
     <button id="play3">ROY WOODS</button>
     <button id="play4">PLAZA</button>
     <button id="play5">DVSN</button>
-    <button id="stop">stop</button>
+    <button id="stop">STOP</button>
   	</div>
 
 	<div class="ovo">
@@ -41,15 +41,13 @@
   		<div class="ovo-song-cell" id ='About'> About True OVO <div class="ovo-artist-cell" id='true'><div> True OVO is a platform that samples a song to represent each artist under the label (OVO). Not only are these artists quite talented - they all were raised in Toronto. To listen to other songs by these artists please click <a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">here.</a> </div></div>
 
   	<script>
+       // 1. YouTube API Code
   		 // 2. This code loads the IFrame Player API code asynchronously.
       var tag = document.createElement('script');
 
       tag.src = "https://www.youtube.com/iframe_api";
       var firstScriptTag = document.getElementsByTagName('script')[0];
       firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-
-
 
       // 3. This function creates an <iframe> (and YouTube player)
       //    after the API code downloads.
@@ -58,7 +56,7 @@
         player = new YT.Player('player', {
           height: '390',
           width: '640',
-          videoId: 'pt3N4O2de8U',
+          videoId: '',
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
@@ -66,23 +64,17 @@
         });
       }
 
-
-
-
       $("#play").click(function(){
         player.loadVideoById("5L7g17qvaH0");
         playVideo();
 
       })
 
-
-
       $("#play2").click(function(){
         player.loadVideoById("5mEOjwf55u8");
         playVideo();
 
       })
-
 
       $("#play3").click(function(){
         player.loadVideoById("cFkoM7QLMwY");
@@ -102,13 +94,9 @@
 
       })
 
-
-    //bDSx_OOR66A
-
       $("#stop").click(function(){
         stopVideo();
       })
-
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
