--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OVO</title>
+	<title>TRUE OVO SOUND</title>
 	<!-- LINKED FILES + JQUERY ACCESS -->
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	<script src="js/script.js"></script>
@@ -18,10 +18,29 @@
 	<link href="https://fonts.googleapis.com/css?family=Palanquin+Dark:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300" rel="stylesheet">
 
-
 </head>
+
 <body>
-	<!-- SONG + ARTIST NAME -->
+  <!--  HAMBURGER MENU - CREATED WITH SPAN ELEMENTS -->
+  
+  <div class="navbar-header">
+    <div class="toggle-button" id="toggle">
+      <span class="bar top"></span>
+      <span class="bar middle"></span>
+      <span class="bar bottom"></span>
+    </div>
+  </div>
+  
+  <!-- MARKUP FOR THE OVERLAY-->
+<nav class="overlay" id="overlay">
+  <ul>
+    <li><a href="#">True OVO</a></li>
+    <li><a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">Spotify Playlist</a></li>
+  </ul>
+</nav>
+
+</div>
+	<!-- SONG + ARTIST NAME BUTTONS -->
 	<div id="player"></div>
     <button id="play">PND</button>
     <button id="play2">MAJID JORDAN</button>
@@ -31,6 +50,7 @@
     <button id="stop">STOP</button>
   	</div>
 
+  <!-- SONG + ARTIST NAME -->
 	<div class="ovo">
   		<div class="ovo-song-cell" id='OVO'> True Ovo <div class="ovo-artist-cell" id='stream'> Stream Toronto Artists Under The Label. </div></div>
   		<div class="ovo-song-cell" id ='Spirit'> Spirit <div class="ovo-artist-cell" id='majid'> Majid Jordan </div></div>
@@ -38,11 +58,11 @@
   		<div class="ovo-song-cell" id ='NotNice'> Not Nice <div class="ovo-artist-cell" id='pnd'> PartyNextDoor </div> </div>
   		<div class="ovo-song-cell" id ='Switch'> Switch <div class="ovo-artist-cell" id='roy'> Roy Woods </div></div>
   		<div class="ovo-song-cell" id ='Personal'> Personal <div class="ovo-artist-cell" id='plaza'> Plaza </div></div>
-  		<div class="ovo-song-cell" id ='About'> About True OVO <div class="ovo-artist-cell" id='true'><div> True OVO is a platform that samples a song to represent each artist under the label (OVO). Not only are these artists quite talented - they all were raised in Toronto. To listen to other songs by these artists please click <a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">here.</a> </div></div>
+  		<div class="ovo-song-cell" id ='About'> About True OVO <div class="ovo-artist-cell" id='true'><div> True OVO is a platform that samples an underrated track to represent each artist under the label (OVO). Not only are these artists quite talented; they all were raised in Toronto. To listen to other songs by these artists please click <a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">here.</a> </div></div>
 
-  	<script>
-       // 1. YouTube API Code
-  		 // 2. This code loads the IFrame Player API code asynchronously.
+  	<script> 
+    // 1. YouTube API Code
+    // 2. This code loads the IFrame Player API code asynchronously.
       var tag = document.createElement('script');
 
       tag.src = "https://www.youtube.com/iframe_api";
@@ -119,12 +139,12 @@
 
       function playVideo() {
         player.playVideo();
-      } 
+      }   
   	</script>
 </body>
 </html>
 
 <!-- OUTSIDE RESOURCES -->
-
-
+<!-- HAMBURGER MENU https://codepen.io/anon/pen/xQaqda -->
+<!-- YOUTUBE PLAYER API https://developers.google.com/youtube/iframe_api_reference -->
 
