--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -42,24 +42,22 @@
 </div>
 	<!-- SONG + ARTIST NAME BUTTONS -->
 	<div id="player"></div>
-    <button id="play">PND</button>
-    <button id="play2">MAJID JORDAN</button>
+    <button id="play">MAJID JORDAN</button>
+    <button id="play2">PND</button>
     <button id="play3">ROY WOODS</button>
-    <button id="play4">PLAZA</button>
-    <button id="play5">DVSN</button>
+    <button id="play4">DVSN</button>
+    <button id="play5">PLAZA</button>
     <button id="stop">STOP</button>
   	</div>
 
   <!-- SONG + ARTIST NAME -->
 	<div class="ovo">
   		<div class="ovo-song-cell" id='OVO'> True Ovo <div class="ovo-artist-cell" id='stream'> Stream Toronto Artists Under The Label. </div></div>
-  		<div class="ovo-song-cell" id ='Spirit'> Spirit <div class="ovo-artist-cell" id='majid'> Majid Jordan </div></div>
+      <div class="ovo-song-cell" id ='Free'> Free (Us) <div class="ovo-artist-cell" id='majid'> Majid Jordan </div></div>
+  		<div class="ovo-song-cell" id ='Naked'> Naked <div class="ovo-artist-cell" id='pnd'> PartyNextDoor </div></div>
+      <div class="ovo-song-cell" id ='NewNew'> New New <div class="ovo-artist-cell" id='roy'> Roy Woods </div></div>
   		<div class="ovo-song-cell" id ='Mood'> Mood <div class="ovo-artist-cell" id='dvsn'> DVSN </div></div>
-  		<div class="ovo-song-cell" id ='NotNice'> Not Nice <div class="ovo-artist-cell" id='pnd'> PartyNextDoor </div> </div>
-  		<div class="ovo-song-cell" id ='Switch'> Switch <div class="ovo-artist-cell" id='roy'> Roy Woods </div></div>
-  		<div class="ovo-song-cell" id ='Personal'> Personal <div class="ovo-artist-cell" id='plaza'> Plaza </div></div>
-  		<div class="ovo-song-cell" id ='About'> About True OVO <div class="ovo-artist-cell" id='true'><div> True OVO is a platform that samples an underrated track to represent each artist under the label (OVO). Not only are these artists quite talented; they all were raised in Toronto. To listen to other songs by these artists please click <a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">here.</a> </div></div>
-
+  		<div class="ovo-song-cell" id ='Personal'> Wanting You <div class="ovo-artist-cell" id='plaza'> Plaza </div></div>
   	<script> 
     // 1. YouTube API Code
     // 2. This code loads the IFrame Player API code asynchronously.
@@ -85,31 +83,33 @@
       }
 
       $("#play").click(function(){
-        player.loadVideoById("5L7g17qvaH0");
+        player.loadVideoById("6J_OV8krhew");
         playVideo();
 
       })
 
       $("#play2").click(function(){
-        player.loadVideoById("5mEOjwf55u8");
+        player.loadVideoById("w31bxXWv4i4");
         playVideo();
 
       })
 
       $("#play3").click(function(){
-        player.loadVideoById("cFkoM7QLMwY");
+        player.loadVideoById("t4b-vgVuInE");
         playVideo();
+
+        //cFkoM7QLMwY
 
       })
 
       $("#play4").click(function(){
-        player.loadVideoById("4WI_lF_xxG4");
+        player.loadVideoById("P17M2cybjjs");
         playVideo();
 
       })
 
         $("#play5").click(function(){
-        player.loadVideoById("bDSx_OOR66A");
+        player.loadVideoById("4WI_lF_xxG4");
         playVideo();
 
       })
