--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -34,7 +34,7 @@
   <!-- MARKUP FOR THE OVERLAY-->
 <nav class="overlay" id="overlay">
   <ul>
-    <li><a href="#">True OVO</a></li>
+    <li><a href="https://agnana.github.io/Interactive_Media/ABOUT/">True OVO</a></li>
     <li><a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">Spotify Playlist</a></li>
   </ul>
 </nav>
@@ -42,12 +42,14 @@
 </div>
 	<!-- SONG + ARTIST NAME BUTTONS -->
 	<div id="player"></div>
-    <button id="play">MAJID JORDAN</button>
-    <button id="play2">PND</button>
-    <button id="play3">ROY WOODS</button>
-    <button id="play4">DVSN</button>
-    <button id="play5">PLAZA</button>
-    <button id="stop">STOP</button>
+
+  <div id="menu">
+    <button id="play" class="button" data-index="1">MAJID JORDAN</button>
+    <button id="play2" class="button" data-index="2">PND</button>
+    <button id="play3" class="button" data-index="3">ROY WOODS</button>
+    <button id="play4" class="button" data-index="4">DVSN</button>
+    <button id="play5" class="button" data-index="5">PLAZA</button>
+    <button id="stop" class="button" data-index="6">STOP</button>
   	</div>
 
   <!-- SONG + ARTIST NAME -->
