--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,12 +16,11 @@
 	<!-- IMPORTED FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Palanquin+Dark:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Quantico" rel="stylesheet">
 </head>
 
 <body>
   <!--  HAMBURGER MENU - CREATED WITH SPAN ELEMENTS -->
-  
   <div class="navbar-header">
     <div class="toggle-button" id="toggle">
       <span class="bar top"></span>
@@ -32,25 +30,23 @@
   </div>
   
   <!-- MARKUP FOR THE OVERLAY-->
-<nav class="overlay" id="overlay">
-  <ul>
-    <li><a href="https://agnana.github.io/Interactive_Media/ABOUT/">True OVO</a></li>
-    <li><a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw">Spotify Playlist</a></li>
-  </ul>
-</nav>
+  <nav class="overlay" id="overlay">
+    <ul>
+      <li><a href="https://agnana.github.io/Interactive_Media/ABOUT/" target="_blank">True OVO</a></li>
+      <li><a href="https://open.spotify.com/user/22or5tpelhu5rhkzqwbbpmani/playlist/3r7ilAQj3YGXd50UBgNIMG?si=kGMdX0fyTze3JPJsfOtlxw" target="_blank">Spotify Playlist</a></li>
+    </ul>
+  </nav>
 
-</div>
 	<!-- SONG + ARTIST NAME BUTTONS -->
 	<div id="player"></div>
-
-  <div id="menu">
-    <button id="play" class="button" data-index="1">MAJID JORDAN</button>
-    <button id="play2" class="button" data-index="2">PND</button>
-    <button id="play3" class="button" data-index="3">ROY WOODS</button>
-    <button id="play4" class="button" data-index="4">DVSN</button>
-    <button id="play5" class="button" data-index="5">PLAZA</button>
-    <button id="stop" class="button" data-index="6">STOP</button>
-  	</div>
+    <div id="menu">
+      <button id="play" class="button" data-index="1">MAJID JORDAN</button>
+      <button id="play2" class="button" data-index="2">PND</button>
+      <button id="play3" class="button" data-index="3">ROY WOODS</button>
+      <button id="play4" class="button" data-index="4">DVSN</button>
+      <button id="play5" class="button" data-index="5">PLAZA</button>
+      <button id="stop" class="button" data-index="6">STOP</button>
+  	 </div>
 
   <!-- SONG + ARTIST NAME -->
 	<div class="ovo">
@@ -60,7 +56,9 @@
       <div class="ovo-song-cell" id ='NewNew'> New New <div class="ovo-artist-cell" id='roy'> Roy Woods </div></div>
   		<div class="ovo-song-cell" id ='Mood'> Mood <div class="ovo-artist-cell" id='dvsn'> DVSN </div></div>
   		<div class="ovo-song-cell" id ='Personal'> Wanting You <div class="ovo-artist-cell" id='plaza'> Plaza </div></div>
-  	<script> 
+  </div>
+
+  <script> 
     // 1. YouTube API Code
     // 2. This code loads the IFrame Player API code asynchronously.
       var tag = document.createElement('script');
@@ -105,7 +103,7 @@
       })
 
       $("#play4").click(function(){
-        player.loadVideoById("P17M2cybjjs");
+        player.loadVideoById("fcPDBXgdtbY");
         playVideo();
 
       })
@@ -142,7 +140,8 @@
       function playVideo() {
         player.playVideo();
       }   
-  	</script>
+  </script>
+
 </body>
 </html>
 
