--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -85,6 +85,10 @@
         });
       }
 
+      $("#start").click(function(){
+        stopVideo();
+      })
+
       $("#play").click(function(){
         player.loadVideoById("6J_OV8krhew");
         playVideo();
