--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>TRUE OVO SOUND</title>
 	<!-- LINKED FILES + JQUERY ACCESS -->
+  <script src="https://www.youtube.com/iframe_api"></script>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 	<script src="js/script.js"></script>
 
@@ -62,21 +63,13 @@
   </div>
 
   <script> 
-    // 1. YouTube API Code
-    // 2. This code loads the IFrame Player API code asynchronously.
-      var tag = document.createElement('script');
-
-      tag.src = "https://www.youtube.com/iframe_api";
-      var firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-
-      // 3. This function creates an <iframe> (and YouTube player)
+        // 3. This function creates an <iframe> (and YouTube player)
       //    after the API code downloads.
       var player;
       function onYouTubeIframeAPIReady() {
         player = new YT.Player('player', {
-          height: '390',
-          width: '640',
+          height: '0',
+          width: '0',
           videoId: '',
           events: {
             'onReady': onPlayerReady,
@@ -91,7 +84,9 @@
 
       $("#play").click(function(){
         player.loadVideoById("6J_OV8krhew");
+        setTimeout(function(){
         playVideo();
+      }, 500)
 
       })
 
@@ -136,7 +131,7 @@
       var done = false;
       function onPlayerStateChange(event) {
         if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
+          //setTimeout(stopVideo, 6000);
           done = true;
         }
       }
