--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -40,15 +40,20 @@
 
 	<!-- SONG + ARTIST NAME BUTTONS -->
 	<div id="player"></div>
-    <div id="menu">
-      <button id="start" class="button" data-index="0">↺</button>
+    <div id="menu"> 
       <button id="play" class="button" data-index="1">MAJID JORDAN</button>
       <button id="play2" class="button" data-index="2">PND</button>
       <button id="play3" class="button" data-index="3">ROY WOODS</button>
       <button id="play4" class="button" data-index="4">DVSN</button>
       <button id="play5" class="button" data-index="5">PLAZA</button>
-      <button id="stop" class="button" data-index="6">◼</button>
   	 </div>
+
+  <div id="player2"></div>
+  <div id="option">
+      <button id="playing" class="button">►</button>
+      <button id="stop" class="button">◼</button>
+      <button id="restart" class="button" data-index="0">↺</button>
+  </div>
 
   <!-- SONG + ARTIST NAME -->
 	<div class="ovo">
@@ -58,12 +63,11 @@
       <div class="ovo-song-cell" id ='NewNew'> New New <div class="ovo-artist-cell" id='roy'> Roy Woods </div></div>
   		<div class="ovo-song-cell" id ='Mood'> Mood <div class="ovo-artist-cell" id='dvsn'> DVSN </div></div>
   		<div class="ovo-song-cell" id ='Personal'> Wanting You <div class="ovo-artist-cell" id='plaza'> Plaza </div></div>
-      <div class="ovo-song-cell" id ='Final'> WHAT IS OVO SOUND? <div class="ovo-artist-cell" id='fin'><a href="http://www.ovosound.com/" target="_blank"> OVO SOUND </a> is a record label founded by Aubrey Drake Graham and long-time friends and partners Noah “40” Shebib and Oliver El-Khatib.</div></div>
-
   </div>
 
   <script> 
-        // 3. This function creates an <iframe> (and YouTube player)
+  // YOUTUBE API CODE
+      // This function creates an <iframe> (and YouTube player)
       //    after the API code downloads.
       var player;
       function onYouTubeIframeAPIReady() {
@@ -78,15 +82,19 @@
         });
       }
 
-      $("#start").click(function(){
+      $("#restart").click(function(){
         stopVideo();
+      })
+
+      $("#playing").click(function(){
+        playVideo();
       })
 
       $("#play").click(function(){
         player.loadVideoById("6J_OV8krhew");
         setTimeout(function(){
         playVideo();
-      }, 500)
+      }, )
 
       })
 
