--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -70,8 +70,8 @@
             Mood 
             <div class="ovo-artist-cell" id='dvsn'> DVSN </div>
          </div>
-         <div class="ovo-song-cell" id ='Personal'>
-            Wanting You 
+         <div class="ovo-song-cell" id ='HoldUp'>
+            Hold Up
             <div class="ovo-artist-cell" id='plaza'> Plaza </div>
          </div>
       </div>
@@ -130,7 +130,7 @@
              })
          
                $("#play5").click(function(){
-               player.loadVideoById("4WI_lF_xxG4");
+               player.loadVideoById("5AbpBBlAQ3g");
                playVideo();
          
              })
